src/main/default/objects/Price_Book_Rule__c/Price_Book_Rule__c.object-meta.xml
<CustomObject>
    <description>This object contains the criteria used to apply actions in the CPQ module.</description>
    <label>Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>