src/main/default/objects/Price_Book_Rule__c/fields/Active_Actions__c.field-meta.xml
<CustomField>
    <fullName>Active_Actions__c</fullName>
    <description>The number of active Rule Actions</description>
    <label>Active Actions</label>
    <summaryFilterItems>
        <field>Price_Book_Rule_Action__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Price_Book_Rule_Action__c.Price_Book_Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>