src/main/default/objects/Price_Book_Rule__c/fields/Applies_To__c.field-meta.xml
<CustomField>
    <fullName>Applies_To__c</fullName>
    <label>Applies To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ticket__c</fullName>
                <default>true</default>
                <label>Ticket__c</label>
            </value>
            <value>
                <fullName>Quote__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>