src/main/default/objects/Price_Book_Rule__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>This criteria should be a valid Salesforce formula and will be used to determine if actions should be applied in the CPQ module.</description>
    <inlineHelpText>Formula that specifies when any linked rule actions apply.</inlineHelpText>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>