src/main/default/objects/Price_Book_Rule__c/fields/CriteriaQueryFields__c.field-meta.xml
<CustomField>
    <fullName>CriteriaQueryFields__c</fullName>
    <description>DO NOT CHANGED</description>
    <label>CriteriaQueryFields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>