src/main/default/objects/Price_Book_Rule__c/fields/CriteriaStack__c.field-meta.xml
<CustomField>
    <fullName>CriteriaStack__c</fullName>
    <description>Preprocessed Criteria - DO NOT MODIFIED</description>
    <inlineHelpText>Preprocessed Criteria - DO NOT MODIFIED</inlineHelpText>
    <label>CriteriaStack</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>