src/main/default/objects/Price_Book_Rule__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Purpose of the rule.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>