src/main/default/objects/Price_Book_Rule__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the rule is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>