src/main/default/objects/Price_Book_Rule__c/fields/IsCriteriaDirty__c.field-meta.xml
<CustomField>
    <fullName>IsCriteriaDirty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True - criteria have change
False - no change</description>
    <label>IsCriteriaDirty</label>
    <type>Checkbox</type>
</CustomField>