src/main/default/objects/Price_Book_Rule__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <label>Price Book</label>
    <referenceTo>Price_Book__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>PriceBookRules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>