src/main/default/objects/Price_Book_Rule__c/fields/Price_Book_Item__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book Item</label>
    <referenceTo>Price_Book_Item__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>