src/main/default/objects/Price_Book_Rule__c/validationRules/RequiredFieldAppliesTo.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredFieldAppliesTo</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Applies_To__c )</errorConditionFormula>
    <errorDisplayField>Applies_To__c</errorDisplayField>
    <errorMessage>Applies To is required.</errorMessage>
</ValidationRule>