src/main/default/objects/Price_Book_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price_Book__c</columns>
    <columns>Criteria__c</columns>
    <columns>IsActive__c</columns>
    <columns>IsCriteriaDirty__c</columns>
    <columns>Description__c</columns>
    <columns>CriteriaQueryFields__c</columns>
    <columns>Active_Actions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>